add_executable(217 "217. Contains Duplicate.cpp")
add_executable(242 "242. Valid Anagram.cpp")
add_executable(1299 "1299. Replace Elements with Greatest Element on Right Side.cpp")
add_executable(392 "392. Is Subsequence.cpp")
add_executable(58 "58. Length of Last Word.cpp")
add_executable(1 "1. Two Sum.cpp")
add_executable(14 "14. Longest Common Prefix.cpp")
add_executable(118 "118. Pascal's Triangle.cpp")
add_executable(27 "27. Remove Element.cpp")